deployment-gp1f4a9.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
     name: desplegament-calculadora
spec:
     replicas: 5
     selector:
          matchLabels:
               app: calculadora
     template:
          metadata:
               labels:
                    app: calculadora
          spec:
               containers:
               - name: calculadora
                 image: globproj2/app_operacions_millorada:3.5
                 ports:
                 - containerPort: 80
