serv-calc.yaml
apiVersion: v1
kind: Service
metadata:
     name: serv-calc
spec:
     type: NodePort
     selector:
          app: calc-pods
     ports:
     - port: 4000
       targetPort: 80
       nodePort: 30000
