service-gp1f4a9.yaml
apiVersion: v1
kind: Service
metadata:
     name: servei-calculadora
spec:
     type: NodePort
     selector:
          app: calculadora
     ports:
     - port: 4000
       targetPort: 80
       nodePort: 30000
