ingress-gp1f4a9.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
     name: proxy-calculadora
     annotations:
          kubernetes.io/ingres.class: "nginx"
spec:
     rules:
     - host: www.calculadora-gp1f4a9.net
       http:
            paths:      
            - path: /
              pathType: Prefix
              backend:
                   service:
                        name: servei-calculadora
                        port:
                             number: 4000
